--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,22 +1,22 @@
-name: Build PixelTicket
+name: Build (Java 8 / Spigot 1.16.5)
 on:
-  push: { branches: ["**"] }
-  pull_request: { branches: ["**"] }
-  workflow_dispatch:
+  push: { branches: [ main, master ] }
+  pull_request: { branches: [ main, master ] }
 jobs:
-  build-maven:
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-java@v4
+      - name: Set up JDK 8
+        uses: actions/setup-java@v4
         with:
           distribution: temurin
-          java-version: "8"
-      - name: Build (Maven)
-        run: mvn -B -ntp -DskipTests package
-      - name: Upload artifact
+          java-version: '8'
+          cache: maven
+      - name: Build with Maven
+        run: mvn -B -DskipTests package
+      - name: Upload JAR
         uses: actions/upload-artifact@v4
         with:
-          name: PixelTicket-jar
-          path: target/PixelTicket-1.2.4.jar
-          if-no-files-found: error
+          name: PocketPhoto-jar
+          path: target/*.jar
