--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,54 +1,22 @@
-name: Build (Java 8 / Spigot 1.16.5)
-
+name: Build PixelTicket
 on:
-  push:
-    branches: [ main, master ]
-    tags: [ "v*", "release-*" ]
-  pull_request:
+  push: { branches: ["**"] }
+  pull_request: { branches: ["**"] }
   workflow_dispatch:
-
-permissions:
-  contents: read
-
 jobs:
-  build:
+  build-maven:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Set up JDK 8 (Temurin) with Maven cache
-        uses: actions/setup-java@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
         with:
           distribution: temurin
-          java-version: '8'
-          cache: maven
-
-      - name: Print Maven / Java versions
-        run: |
-          java -version
-          mvn -v
-
-      - name: Resolve Project Version
-        id: ver
-        shell: bash
-        run: echo "VERSION=$(mvn -q -DforceStdout help:evaluate -Dexpression=project.version)" >> $GITHUB_ENV
-
-      - name: Build (no tests)
-        run: mvn -B -e -DskipTests package
-
-      - name: Prepare artifact
-        shell: bash
-        run: |
-          mkdir -p dist
-          # 결과 JAR 복사 및 보기 좋은 이름으로 재배치
-          cp target/*.jar "dist/UltimatePokeItemizer-${VERSION}.jar"
-          ls -al dist
-
+          java-version: "8"
+      - name: Build (Maven)
+        run: mvn -B -ntp -DskipTests package
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: UltimatePokeItemizer-${{ env.VERSION }}
-          path: dist/*.jar
-          retention-days: 14
+          name: PixelTicket-jar
+          path: target/PixelTicket-1.0.0.jar
+          if-no-files-found: error
