--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,14 +1,13 @@
-name: PixelTicket
-main: gg.pixelticket.PixelTicketPlugin
-version: 1.2.1
+name: UltimateBackpack
+main: com.minkang.ultimate.backpack.BackpackPlugin
+version: 1.3.0
 api-version: 1.16
+author: Mingang Jeon & Team
 commands:
-  지급:
-    description: 권 지급/설정/테스트
-    usage: "/지급 <권종류> <플레이어> <갯수> | /지급 설정 <권종류> | /지급 테스트"
-  하트비늘:
-    description: 하트비늘 관리/취소/지급
-    usage: "/하트비늘 [취소|아이템|지급 <플레이어> <개수>|리로드]"
+  가방:
+    description: 개인 가방 명령어
+    aliases: [backpack, bag, 백팩]
 permissions:
-  pixelticket.admin:
+  ultimatebackpack.admin:
+    description: 운영자 권한(지급/크기/리로드/설정)
     default: op
