--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: PixelTicket
 main: gg.pixelticket.PixelTicketPlugin
-version: 1.4.4
+version: 1.4.4-patch.1
 api-version: 1.16
 commands:
   지급:
