--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>gg.pixelticket</groupId>
   <artifactId>PixelTicket</artifactId>
-  <version>1.4.4-patch.1</version>
+  <version>1.4.4-patch.1-patch.2</version>
   <packaging>jar</packaging>
   <name>PixelTicket</name>
 
