--- a/src/main/resources/legend_names_ko.yml
+++ b/src/main/resources/legend_names_ko.yml
@@ -85,3 +85,14 @@ names:
   'Chi-Yu': "위유이"
   'Koraidon': "코라이돈"
   'Miraidon': "미라이돈"
+  'Buzzwole': "매시붕"
+  'Pheromosa': "페로코체"
+  'Xurkitree': "전수목"
+  'Celesteela': "철화구야"
+  'Kartana': "종이신도"
+  'Guzzlord': "악식킹"
+  'Poipole': "베베놈"
+  'Naganadel': "아고용"
+  'Stakataka': "차곡차곡"
+  'Blacephalon': "두파팡"
+  'Nihilego': "텅비드"
